--- a/Weaver/index.html
+++ b/Weaver/index.html
@@ -43,7 +43,7 @@
   <!-- New navigation links -->
   <nav class="navbar">
     <a href="#home">Home</a>
-    <a href="#about">About</a>
+    <a href="about.html">About</a>
     <a href="#login">Login</a>
   </nav>
 
