--- a/Weaver/about.html
+++ b/Weaver/about.html
@@ -1,13 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About - Diagram Weaver</title>
-  <link rel="stylesheet" href="about.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Diagram Weaver</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://cdn.jsdelivr.net/npm/mermaid@10.6.1/dist/mermaid.min.js"></script>
 </head>
 <body>
-  <div class="about-container">
+ 
+  <header>
+  <div class="logo-container">
+    <div class="logo">DW</div>
+    <h1>Diagram Weaver</h1>
+  </div>
+
+  <div class="controls">
+  <!-- New navigation links -->
+  <nav class="navbar">
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="#login">Login</a>
+  </nav>
+
+
+    <button id="theme-toggle" aria-label="Toggle theme">
+      <!-- Light mode icon -->
+      <svg id="light-icon" class="theme-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+        <path fill="none" d="M0 0h24v24H0z"/>
+        <path d="M12 18a6 6 0 1 1 0-12 6 6 0 0 1 0 12zm0-2a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM11 1h2v3h-2V1zm0 19h2v3h-2v-3zM3.515 4.929l1.414-1.414L7.05 5.636 5.636 7.05 3.515 4.93zM16.95 18.364l1.414-1.414 2.121 2.121-1.414 1.414-2.121-2.121zm2.121-14.85l1.414 1.415-2.121 2.121-1.414-1.414 2.121-2.121zM5.636 16.95l1.414 1.414-2.121 2.121-1.414-1.414 2.121-2.121zM23 11v2h-3v-2h3zM4 11v2H1v-2h3z"/>
+      </svg>
+
+      <!-- Dark mode icon -->
+      <svg id="dark-icon" class="theme-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+        <path fill="none" d="M0 0h24v24H0z"/>
+        <path d="M10 7a7 7 0 0 0 12 4.9v.1c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2h.1A6.979 6.979 0 0 0 10 7zm-6 5a8 8 0 0 0 15.062 3.762A9 9 0 0 1 8.238 4.938 7.999 7.999 0 0 0 4 12z"/>
+      </svg>
+    </button>
+
+    <button id="help-toggle" aria-label="Toggle help panel">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+        <path fill="none" d="M0 0h24v24H0z"/>
+        <path d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16zm-1-5h2v2h-2v-2zm2-1.645V14h-2v-1.5a1 1 0 0 1 1-1 1.5 1.5 0 1 0-1.471-1.794l-1.962-.393A3.501 3.501 0 1 1 13 13.355z"/>
+      </svg>
+    </button>
+  </div>
+</header>
+
+
+<div class="about-container">
     <h1>About Diagram Weaver</h1>
     <p>
       <strong>Diagram Weaver</strong> is an innovative tool designed to transform structured syntax prompts into visually engaging flowcharts. Our mission is to simplify diagram creation for developers, designers, educators, and documentarians.
@@ -36,5 +77,7 @@
       Diagram Weaver is ideal for software engineers, technical writers, educators, product designers, and anyone who thinks in structured flows.
     </p>
   </div>
+
+  <script src="script.js" type="module"></script>   
 </body>
 </html>
